2025-11-30  Araki Ken  <arakiken@users.sf.net>

	* vt_logical_visual.c: comb_render() calls comb_visual() to enable
	  render of other vt_logical_visual.
	  (https://github.com/arakiken/mlterm/issues/152)

	* vt_term.c, test.c: Add TEST_vt_term().

2025-11-24  Araki Ken  <arakiken@users.sf.net>

	* vt_char_encoding.c: Fix illegal memory access in utf8_illegal_char().

2025-11-23  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: Draw cursor in a picture with inverted colors.

	* fb/ui_virtual_key.c: Fix arguments of ui_window_copy_area().

	* fb/ui_window.c: Fix compiling error by the previous commit.

2025-11-23  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c:
	  - get_state() returns pic_glyph with INLINEPIC_REVERSED flag if
	    vt_char_is_reversed() is true.
	  - draw_picture() reverses the colors if INLINEPIC_REVERSED flag is set.

	* */ui_window.c, ui_window.h:
	  Add 'int reverse' to arguments of ui_window_copy_area().

	* beos/ui.h: Define Button1Mask - Button3Mask.

	* beos.cpp, beos.h, cocoa.[hm], cocoatouch.m:
	  Add 'int reverse' to arguments of view_copy_area().

	* ui_font_manager.c: ui_get_font() returns usascii_font for DRCS.

	* vt_char_encoding.c:
	  - vt_char_encoding_conv_new() set conv->illegal_char to iso2022_illegal_char
	    (where vt_convert_unicode_pua_to_drcs() is called) by default if encoding
	    is based on ISO2022.
	  - Add iso2022_illegal_char_loose which is used if flag of
	    vt_char_encoding_conv_set_use_loose_rule() is 1.
	  - utf8_illegal_char() converts DRCS to unicode pua with the use of
	    vt_convert_drcs_to_unicode_pua().

	* vt_str_parser.c:
	  - next_char() converts format of drcs charset from vt_drcs style to
	    ef_charset style.
	  - Remove vt_convert_drcs_to_unicode_pua() in next_char().

	* vt_char.[ch]:
	  - vt_char_combine() doesn't execute normalize() for PICTURE_CHARSET.
	  - Add vt_char_is_reversed().
	  - PICTURE_POS_BITS 23 -> 22 for INLINEPIC_REVERSED() bit in ui_draw_str.c
